# telegram-bot-template-v2-ligth

./: .dockerignore  .env.example  .gitignore  AI_GENERATION_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
apps/admin/: Dockerfile  main.py
apps/admin/admin_panel/views/: user_admin.py
apps/admin/api/routes/: stats.py  users.py
apps/bot/: Dockerfile  di_container.py  main.py
apps/bot/filters/: admin.py
apps/bot/handlers/: errors.py
apps/bot/handlers/user/: __init__.py  start.py
apps/bot/keyboards/: common.py
apps/bot/middlewares/: di_middleware.py  logging_middleware.py  metrics_middleware.py
apps/bot/services/: analytics_service.py  user_service.py
apps/bot/states/: example.py
config/settings/: admin.py  base.py  bot.py  database.py  observability.py
infrastructure/api_services/services/: sheduler.py
infrastructure/cache/: cache_service.py  redis_client.py
infrastructure/database/: setup.py  uow.py
infrastructure/database/core/: __init__.py  session.py
infrastructure/database/models/: __init__.py  analytics.py  base.py  users.py
infrastructure/database/repo/: base.py  users.py
infrastructure/database/repositories/: __init__.py  analytics_repository.py  base.py  user_repository.py
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 20260221_1024_a40e602665f4_init_tables.py  7686b5b2a990_init_tables.py
infrastructure/monitoring/: logging.py  metrics.py
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/alembic/: create_migrations.sh  downgrade_migration.sh  run_migrations.sh
shared/dto/: __init__.py  analytics.py  user.py
shared/enums/: __init__.py
shared/exceptions/: __init__.py  base.py
shared/utils/: formatters.py
