[tool.poetry]
name = "telegram-bot-template-v2"
version = "2.0.0"
description = "Modern Telegram Bot Template with microservices architecture"
authors = ["alex <i@alex-bogdanov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
# Core
python = "^3.12"
aiogram = "^3.13"
pydantic = "^2.9"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.13"
asyncpg = "^0.29"
psycopg2-binary = "^2.9"

# Cache
redis = "^5.0"

# Web Framework (Admin Panel)
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqladmin = "^0.18"
python-multipart = "^0.0.9"

# Task Queue
taskiq = "^0.11"
taskiq-redis = "^1.0"
taskiq-aio-pika = "^0.4"

# Dependency Injection
dishka = "^1.3"

# Logging & Monitoring
structlog = "^24.1"
prometheus-client = "^0.20"
aiogram-prometheus = "^0.3.0"

# Utilities
babel = "^2.14"
python-json-logger = "^2.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
httpx = "^0.27"
faker = "^28.0"

# Linting & Formatting
ruff = "^0.6"
mypy = "^1.11"
pre-commit = "^3.8"

# Type stubs
types-redis = "^4.6"
sqlalchemy = {extras = ["mypy"], version = "^2.0"}

# Dev tools
ipython = "^8.27"
rich = "^13.8"

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["apps", "infrastructure", "shared", "config"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=apps --cov=infrastructure --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
