[tool.poetry]
name = "telegram-bot-template-v2-light"
version = "2.0.0"
description = "Lightweight Telegram Bot Template with clean architecture"
authors = ["alex <i@alex-bogdanov.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Core
python = "^3.12"
aiogram = "^3.13"
pydantic = "^2.9"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.13"
asyncpg = "^0.29"
psycopg2-binary = "^2.9"

# Dependency Injection
dishka = "^1.3"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
faker = "^28.0"

# Linting & Formatting
ruff = "^0.6"
mypy = "^1.11"
pre-commit = "^3.8"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".claude", "infrastructure/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "infrastructure", "shared", "config"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=apps --cov=infrastructure --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
